[gd_scene load_steps=4 format=3 uid="uid://xs2oe31shx5h"]

[ext_resource type="Texture2D" uid="uid://loxphk1oaibi" path="res://assets/diario-avo.png" id="1_k7qo2"]
[ext_resource type="Script" path="res://scripts/diario.gd" id="1_lb8l7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7wkw"]
size = Vector2(51, 50)

[node name="diario_avo" type="Node2D"]
script = ExtResource("1_lb8l7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(103, 91)
scale = Vector2(0.2025, 0.205)
texture = ExtResource("1_k7qo2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(101.5, 94)
shape = SubResource("RectangleShape2D_v7wkw")

[node name="Button" type="Button" parent="Area2D"]
modulate = Color(1, 1, 1, 0)
offset_left = 91.0
offset_top = 84.0
offset_right = 110.0
offset_bottom = 104.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Diario_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Diario_body_exited"]
[connection signal="pressed" from="Area2D/Button" to="." method="_on_button_pressed"]
